# nfl-simulation-engine-lite

./: .gitignore  Procfile  README.md  TeamFactory.py  TeamStats.py  api_Dockerfile  db_setup.py  db_setup_cli.md  docker-compose.yml  game_simulator.py  pyproject.toml  requirements.txt  team_stats.py
.github/workflows/: python-pr-action.yml
api/: gunicorn_config.py  run.py
api/app/: __init__.py  routes.py
data/: v2a_4th_down_playcall_model.pkl
docs/: db_setup_cli.md
input/: input.md
src/: game_simulator.py  game_simulator_test.py
src/db/: db_setup.py
src/fourth_down_models/: models.py  v2_4th_down_playcall_model.pkl
src/game_engine/: GameEngine.py  game_engine.py
src/game_model/: GameModel.py  GameModelFactory.py  GameModel_V1.py  GameModel_V1a.py  GameModel_V1b.py  PrototypeGameModel.py  game_model_factory.py  game_model_v1.py  game_model_v1a.py  prototype_game_model.py
src/nfl_simulation_engine_lite/: game_simulator.py  input.txt  input_week_13.txt  scores_12.txt  test_input.txt  test_scores.txt  weekly_predictions.csv  weekly_predictions_enhanced.csv
src/nfl_simulation_engine_lite/db/: db_conn.py  db_setup.py  nfl_stats.db  rpi_util.py  team_rate_stats_util.py  team_stats_util.py
src/nfl_simulation_engine_lite/game_engine/: game_engine.py
src/nfl_simulation_engine_lite/game_model/: game_model.py  game_model_factory.py  game_model_v1.py  game_model_v1a.py  game_model_v1b.py  (+4 more)
src/simulation_logs/: simulation_logs.md
src/team/: Team.py  TeamFactory.py  team.py  team_factory.py
src/utils/: play_log_util.py
utils/: db_setup.py
(+5 files in other folders)
